@@ -4,6 +4,7 @@ V1.1.8 Wednsday, October 16, 2013
  +Fixed bug 109, segfault when action key missing and history key changed.
  +Updated Russian translation.
  +Fix broken case-sensitive search.
+ +Fixed bug 111, unlock a mutext not locked. 
  
 V1.1.7 Tuesday, October 15, 2013
  +Added remote i386 build and upload to sourceforge.
